--- a/views/guides.ejs
+++ b/views/guides.ejs
@@ -53,7 +53,7 @@
                       <% } %>
                     </div>     
                     <div class="in-development-block">
-                      <h2> <%= inDevelopment[lang] %></h2>
+                      <h2> <%= i18n.guidesPage.inDevelopment[lang] %></h2>
                     </div>        
                 </div>
                 <div class="section">
