--- a/views/articles.ejs
+++ b/views/articles.ejs
@@ -59,11 +59,11 @@
                             </a>      
                         <% } %>
                         <a class="all-guides" href="<%= url %>/<%= lang %>/guides">
-                            ALL GUIDES
+                            <%= i18n.mainPage.allGuides[lang] %>
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 768 768">
                                 <path d="M187.5 132l69-67.5 319.5 319.5-319.5 319.5-69-67.5 253.5-252z"></path>
                             </svg>         
-                        <a>            
+                        </a>            
                     </div>   
                             
                 </div>
